# easy-complete

./: .gitignore  .lintstagedrc.mjs  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  Cargo.toml  LICENSE.MIT  NOTICE  README.md  README.zh-CN.md  install.sh  note.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specs.config.json  turbo.json  uninstall.sh
.github/workflows/: ci.yml  npm-publish.yml  release.yml  typescript.yml  typos.yml
.husky/: pre-commit
assets/v5-logo/: README.md
autocomplete-v5.app/Contents/: Info.plist
build-scripts/: build.py
bundle/dmg/: VolumeIcon.icns
bundle/specs/: -.js  ampx.js  awk.js  aws.js  bash.js  brew.js  bun.js  bunx.js  bw.js  cargo.js  claude.js  code-insiders.js  code.js  codex.js  conda.js  copilot.js  corepack.js  curl.js  deno.js  docker-compose.js  docker.js  (+75 more)
crates/fig_input_method/: Cargo.toml
crates/fig_input_method/src/: macos.rs
crates/fig_telemetry/: Cargo.toml
crates/fig_telemetry/src/: lib.rs
docs/: release-updates.md
proto/: package.json  tsconfig.json
scripts/: build-app.sh  bump-version.sh  fetch-sparkle.sh  generate-sparkle-appcast.sh  install.sh  make-dmg-background.swift  make-dmg.sh  notarize-dmg.sh  sign-macos-app.sh  sync-bundled-specs.mjs  uninstall.sh
themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  github-dark.json  github-light.json  gruvbox-dark.json  gruvbox-light.json  material-dark.json  monokai.json  nord.json  one-dark.json  solarized-dark.json  solarized-light.json  tokyo-night.json
website/: .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.jsonc
(+866 files in other folders)
